# sentinel-os-agentic-benchmark

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  env.py  grader.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  verify_graders.py
server/: __init__.py  app.py  environment.py  grader.py  tasks.py
task_modules/: __init__.py  _score.py  task_basic.py  task_efficiency.py  task_logs.py
tasks/: __init__.py  task_basic.py  task_efficiency.py  task_logs.py
